# Georeference

./: CMakeLists.txt  README.md
src/: algebra.cpp  algebra.h  config.h  georeference.cpp  georeference.h  main.cpp  matrix.cpp  matrix.h
test/: georeferenceTest.cpp  matrixTest.cpp
